force-app/main/default/objects/CTRCDDGProcurement__c.object
<CustomObject>
    <fields>
        <fullName>DocumentNo__c</fullName>
        <label>DocumentNo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDCardNo__c</fullName>
        <label>IDCardNo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sanction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR CDD Sanction</label>
        <referenceTo>CTRCDDSanction__c</referenceTo>
        <relationshipLabel>CTR CDD Government Procurement</relationshipLabel>
        <relationshipName>CTR_Government_Procurement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>CTR CDD Government Procurement</label>
    <nameField>
        <label>CTRGProcurement Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>